updated query params

--- a/llm-server/notebooks/openapi.ipynb
+++ b/llm-server/notebooks/openapi.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,34 +107,160 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 147,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def process_operation(method, api_operation, json_spec):\n",
+    "    if method == \"get\":\n",
+    "        return api_operation\n",
+    "    else:\n",
+    "        input_dict = api_operation[\"requestBody\"][\"content\"][\"application/json\"][\"schema\"]\n",
+    "        json_spec = resolve_refs(json_spec.dict_)\n",
+    "        result = resolve_refs(input_dict, json_spec)\n",
+    "        return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "isolated_request = process_operation(method, api_operation, json_spec)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 149,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'resolve_references_in_json_spec' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[8], line 7\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39m# if method == \"get\":\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[39m#     return api_operation\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[39m# else:\u001b[39;00m\n\u001b[1;32m      4\u001b[0m \u001b[39m#     input_dict = api_operation[\"requestBody\"][\"content\"][\"application/json\"][\"schema\"]\u001b[39;00m\n\u001b[1;32m      5\u001b[0m \u001b[39m#     result = resolve_refs(input_dict, json_spec)\u001b[39;00m\n\u001b[0;32m----> 7\u001b[0m json_spec \u001b[39m=\u001b[39m resolve_references_in_json_spec(json_spec\u001b[39m.\u001b[39mdict_)\n\u001b[1;32m      9\u001b[0m input_dict \u001b[39m=\u001b[39m api_operation[\u001b[39m\"\u001b[39m\u001b[39mrequestBody\u001b[39m\u001b[39m\"\u001b[39m][\u001b[39m\"\u001b[39m\u001b[39mcontent\u001b[39m\u001b[39m\"\u001b[39m][\u001b[39m\"\u001b[39m\u001b[39mapplication/json\u001b[39m\u001b[39m\"\u001b[39m][\u001b[39m\"\u001b[39m\u001b[39mschema\u001b[39m\u001b[39m\"\u001b[39m]\n\u001b[1;32m     11\u001b[0m result \u001b[39m=\u001b[39m resolve_references(input_dict, json_spec)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'resolve_references_in_json_spec' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "{'description': 'Get Spotify catalog information for multiple albums identified by their Spotify IDs.\\n',\n",
+       " 'operationId': 'get-multiple-albums',\n",
+       " 'parameters': [{'in': 'query',\n",
+       "   'name': 'ids',\n",
+       "   'required': True,\n",
+       "   'schema': {'description': 'A comma-separated list of the [Spotify IDs](/documentation/web-api/concepts/spotify-uris-ids) for the albums. Maximum: 20 IDs.\\n',\n",
+       "    'example': '382ObEPsp2rxGrnsizN5TX,1A2GTWGtFfWp7KSQTwWOyo,2noRn2Aes5aoNVsU6iWThc',\n",
+       "    'title': 'Spotify Album IDs',\n",
+       "    'type': 'string'}},\n",
+       "  {'in': 'query',\n",
+       "   'name': 'market',\n",
+       "   'required': False,\n",
+       "   'schema': {'description': 'An [ISO 3166-1 alpha-2 country code](https://en.wikipedia.org/wiki/ISO_3166-1_alpha-2).\\n  If a country code is specified, only content that is available in that market will be returned.<br/>\\n  If a valid user access token is specified in the request header, the country associated with\\n  the user account will take priority over this parameter.<br/>\\n  _**Note**: If neither market or user country are provided, the content is considered unavailable for the client._<br/>\\n  Users can view the country that is associated with their account in the [account settings](https://www.spotify.com/se/account/overview/).\\n',\n",
+       "    'example': 'ES',\n",
+       "    'title': 'Market',\n",
+       "    'type': 'string'}}],\n",
+       " 'responses': {'200': {'$ref': '#/components/responses/ManyAlbums'},\n",
+       "  '401': {'$ref': '#/components/responses/Unauthorized'},\n",
+       "  '403': {'$ref': '#/components/responses/Forbidden'},\n",
+       "  '429': {'$ref': '#/components/responses/TooManyRequests'}},\n",
+       " 'security': [{'oauth_2_0': []}],\n",
+       " 'summary': 'Get Several Albums\\n',\n",
+       " 'tags': ['Albums'],\n",
+       " 'x-spotify-docs-console-url': '/console/get-several-albums/',\n",
+       " 'x-spotify-docs-endpoint-name': 'Get Multiple Albums',\n",
+       " 'x-spotify-policy-list': {'$ref': '#/components/x-spotify-policy/metadataPolicyList'}}"
+      ]
+     },
+     "execution_count": 149,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# if method == \"get\":\n",
-    "#     return api_operation\n",
-    "# else:\n",
-    "#     input_dict = api_operation[\"requestBody\"][\"content\"][\"application/json\"][\"schema\"]\n",
-    "#     result = resolve_refs(input_dict, json_spec)\n",
+    "json.loads(json.dumps(result, indent=4))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 150,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'$ref': '#/components/parameters/QueryAlbumIds'},\n",
+       " {'$ref': '#/components/parameters/QueryMarket'}]"
+      ]
+     },
+     "execution_count": 150,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "isolated_request[\"parameters\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 151,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re\n",
     "\n",
-    "json_spec = resolve_references_in_json_spec(json_spec.dict_)\n",
+    "# ref_list -> [{'$ref': '#/components/parameters/QueryAlbumIds'},\n",
+    "#  {'$ref': '#/components/parameters/QueryMarket'}]\n",
     "\n",
-    "input_dict = api_operation[\"requestBody\"][\"content\"][\"application/json\"][\"schema\"]\n",
-    "\n",
-    "result = resolve_references(input_dict, json_spec)\n",
-    "print(result)"
+    "def hydrateParams(json_spec, ref_list):\n",
+    "    last_portion_list = []\n",
+    "    \n",
+    "    for ref in ref_list:\n",
+    "        match = re.search(r'/([^/]+)$', ref['$ref'])\n",
+    "        if match:\n",
+    "            last_portion_list.append(json_spec[\"components\"][\"parameters\"][match.group(1)])\n",
+    "    \n",
+    "    return last_portion_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 153,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'description': 'Get Spotify catalog information for multiple albums identified by their Spotify IDs.\\n',\n",
+       " 'operationId': 'get-multiple-albums',\n",
+       " 'parameters': [{'in': 'query',\n",
+       "   'name': 'ids',\n",
+       "   'required': True,\n",
+       "   'schema': {'description': 'A comma-separated list of the [Spotify IDs](/documentation/web-api/concepts/spotify-uris-ids) for the albums. Maximum: 20 IDs.\\n',\n",
+       "    'example': '382ObEPsp2rxGrnsizN5TX,1A2GTWGtFfWp7KSQTwWOyo,2noRn2Aes5aoNVsU6iWThc',\n",
+       "    'title': 'Spotify Album IDs',\n",
+       "    'type': 'string'}},\n",
+       "  {'in': 'query',\n",
+       "   'name': 'market',\n",
+       "   'required': False,\n",
+       "   'schema': {'description': 'An [ISO 3166-1 alpha-2 country code](https://en.wikipedia.org/wiki/ISO_3166-1_alpha-2).\\n  If a country code is specified, only content that is available in that market will be returned.<br/>\\n  If a valid user access token is specified in the request header, the country associated with\\n  the user account will take priority over this parameter.<br/>\\n  _**Note**: If neither market or user country are provided, the content is considered unavailable for the client._<br/>\\n  Users can view the country that is associated with their account in the [account settings](https://www.spotify.com/se/account/overview/).\\n',\n",
+       "    'example': 'ES',\n",
+       "    'title': 'Market',\n",
+       "    'type': 'string'}}],\n",
+       " 'responses': {'200': {'$ref': '#/components/responses/ManyAlbums'},\n",
+       "  '401': {'$ref': '#/components/responses/Unauthorized'},\n",
+       "  '403': {'$ref': '#/components/responses/Forbidden'},\n",
+       "  '429': {'$ref': '#/components/responses/TooManyRequests'}},\n",
+       " 'security': [{'oauth_2_0': []}],\n",
+       " 'summary': 'Get Several Albums\\n',\n",
+       " 'tags': ['Albums'],\n",
+       " 'x-spotify-docs-console-url': '/console/get-several-albums/',\n",
+       " 'x-spotify-docs-endpoint-name': 'Get Multiple Albums',\n",
+       " 'x-spotify-policy-list': {'$ref': '#/components/x-spotify-policy/metadataPolicyList'}}"
+      ]
+     },
+     "execution_count": 153,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hydrateParams()"
    ]
   },
   {
@@ -142,9 +268,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "json.loads(json.dumps(result, indent=4))"
-   ]
+   "source": []
   }
  ],
  "metadata": {
