Adding some checks to prevent errors, we will have to add stricter checks to prevent runtime errors

--- a/llm-server/notebooks/openapi.ipynb
+++ b/llm-server/notebooks/openapi.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,13 +11,12 @@
     "from langchain.llms.openai import OpenAI\n",
     "from langchain.requests import TextRequestsWrapper\n",
     "from langchain.tools.json.tool import JsonSpec\n",
-    "\n",
     "import json, yaml"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 172,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 173,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,42 +35,20 @@
     "    paths = json_spec.dict_.get(\"paths\", {})\n",
     "    for path, methods in paths.items():\n",
     "        for method, operation in methods.items():\n",
-    "            if operation.get(\"operationId\") == operation_id:\n",
-    "                return operation, method\n",
-    "\n",
-    "    # If the operation ID is not found, return None\n",
-    "    return None\n"
+    "            # Check if 'operation' is a dictionary\n",
+    "            if isinstance(operation, dict):\n",
+    "                operation_id = operation.get(\"operationId\")\n",
+    "                \n",
+    "                if operation_id == operation_id:\n",
+    "                    return operation, method\n",
+    "            else:\n",
+    "                # Handle the case where 'operation' is not a dictionary\n",
+    "                print(f\"Skipping invalid operation: {operation}\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "api_operation, method=get_api_operation_by_id(json_spec, \"get-multiple-albums\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 145,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'description': 'Get Spotify catalog information for multiple albums identified by their Spotify IDs.\\n', 'operationId': 'get-multiple-albums', 'parameters': [{'$ref': '#/components/parameters/QueryAlbumIds'}, {'$ref': '#/components/parameters/QueryMarket'}], 'responses': {'200': {'$ref': '#/components/responses/ManyAlbums'}, '401': {'$ref': '#/components/responses/Unauthorized'}, '403': {'$ref': '#/components/responses/Forbidden'}, '429': {'$ref': '#/components/responses/TooManyRequests'}}, 'security': [{'oauth_2_0': []}], 'summary': 'Get Several Albums\\n', 'tags': ['Albums'], 'x-spotify-docs-console-url': '/console/get-several-albums/', 'x-spotify-docs-endpoint-name': 'Get Multiple Albums', 'x-spotify-policy-list': {'$ref': '#/components/x-spotify-policy/metadataPolicyList'}} get\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(api_operation, method)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 174,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,106 +79,8 @@
     "        for i, item in enumerate(input_dict):\n",
     "            input_dict[i] = resolve_refs(item, json_spec)\n",
     "    \n",
-    "    return input_dict"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 147,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def process_operation(method, api_operation, json_spec):\n",
-    "    if method == \"get\":\n",
-    "        return api_operation\n",
-    "    else:\n",
-    "        input_dict = api_operation[\"requestBody\"][\"content\"][\"application/json\"][\"schema\"]\n",
-    "        json_spec = resolve_refs(json_spec.dict_)\n",
-    "        result = resolve_refs(input_dict, json_spec)\n",
-    "        return result"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 148,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "isolated_request = process_operation(method, api_operation, json_spec)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 149,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'description': 'Get Spotify catalog information for multiple albums identified by their Spotify IDs.\\n',\n",
-       " 'operationId': 'get-multiple-albums',\n",
-       " 'parameters': [{'in': 'query',\n",
-       "   'name': 'ids',\n",
-       "   'required': True,\n",
-       "   'schema': {'description': 'A comma-separated list of the [Spotify IDs](/documentation/web-api/concepts/spotify-uris-ids) for the albums. Maximum: 20 IDs.\\n',\n",
-       "    'example': '382ObEPsp2rxGrnsizN5TX,1A2GTWGtFfWp7KSQTwWOyo,2noRn2Aes5aoNVsU6iWThc',\n",
-       "    'title': 'Spotify Album IDs',\n",
-       "    'type': 'string'}},\n",
-       "  {'in': 'query',\n",
-       "   'name': 'market',\n",
-       "   'required': False,\n",
-       "   'schema': {'description': 'An [ISO 3166-1 alpha-2 country code](https://en.wikipedia.org/wiki/ISO_3166-1_alpha-2).\\n  If a country code is specified, only content that is available in that market will be returned.<br/>\\n  If a valid user access token is specified in the request header, the country associated with\\n  the user account will take priority over this parameter.<br/>\\n  _**Note**: If neither market or user country are provided, the content is considered unavailable for the client._<br/>\\n  Users can view the country that is associated with their account in the [account settings](https://www.spotify.com/se/account/overview/).\\n',\n",
-       "    'example': 'ES',\n",
-       "    'title': 'Market',\n",
-       "    'type': 'string'}}],\n",
-       " 'responses': {'200': {'$ref': '#/components/responses/ManyAlbums'},\n",
-       "  '401': {'$ref': '#/components/responses/Unauthorized'},\n",
-       "  '403': {'$ref': '#/components/responses/Forbidden'},\n",
-       "  '429': {'$ref': '#/components/responses/TooManyRequests'}},\n",
-       " 'security': [{'oauth_2_0': []}],\n",
-       " 'summary': 'Get Several Albums\\n',\n",
-       " 'tags': ['Albums'],\n",
-       " 'x-spotify-docs-console-url': '/console/get-several-albums/',\n",
-       " 'x-spotify-docs-endpoint-name': 'Get Multiple Albums',\n",
-       " 'x-spotify-policy-list': {'$ref': '#/components/x-spotify-policy/metadataPolicyList'}}"
-      ]
-     },
-     "execution_count": 149,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "json.loads(json.dumps(result, indent=4))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 150,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[{'$ref': '#/components/parameters/QueryAlbumIds'},\n",
-       " {'$ref': '#/components/parameters/QueryMarket'}]"
-      ]
-     },
-     "execution_count": 150,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "isolated_request[\"parameters\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 151,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    return input_dict\n",
+    "\n",
     "import re\n",
     "\n",
     "# ref_list -> [{'$ref': '#/components/parameters/QueryAlbumIds'},\n",
@@ -220,7 +99,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 175,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def process_api_operation(method, api_operation, json_spec):\n",
+    "    if method == \"get\":\n",
+    "        return api_operation\n",
+    "    else:\n",
+    "        request_schema = api_operation[\"requestBody\"][\"content\"][\"application/json\"][\"schema\"]\n",
+    "        resolved_request = resolve_refs(request_schema, json_spec.dict_)\n",
+    "        return resolved_request"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 176,
    "metadata": {},
    "outputs": [
     {
@@ -254,21 +148,18 @@
        " 'x-spotify-policy-list': {'$ref': '#/components/x-spotify-policy/metadataPolicyList'}}"
       ]
      },
-     "execution_count": 153,
+     "execution_count": 176,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "hydrateParams()"
+    "api_operation, method=get_api_operation_by_id(json_spec, \"get-information-about-the-users-current-playback\")\n",
+    "isolated_request = process_api_operation(method, api_operation, json_spec)\n",
+    "isolated_request[\"parameters\"] = hydrateParams(json_spec.dict_, isolated_request[\"parameters\"])\n",
+    "\n",
+    "isolated_request"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
