fixing more bugs

--- a/llm-server/notebooks/openapi.ipynb
+++ b/llm-server/notebooks/openapi.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 258,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,22 +16,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 259,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(\"openapi.yaml\") as f:\n",
-    "    data = yaml.load(f, Loader=yaml.FullLoader)\n",
-    "json_spec = JsonSpec(dict_=data, max_value_length=4000)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 173,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_api_operation_by_id(json_spec, operation_id):\n",
+    "def get_api_operation_by_id(json_spec, s_operation_id):\n",
     "    paths = json_spec.dict_.get(\"paths\", {})\n",
     "    for path, methods in paths.items():\n",
     "        for method, operation in methods.items():\n",
@@ -39,16 +28,17 @@
     "            if isinstance(operation, dict):\n",
     "                operation_id = operation.get(\"operationId\")\n",
     "                \n",
-    "                if operation_id == operation_id:\n",
+    "                if operation_id == s_operation_id:\n",
     "                    return operation, method\n",
     "            else:\n",
     "                # Handle the case where 'operation' is not a dictionary\n",
-    "                print(f\"Skipping invalid operation: {operation}\")\n"
+    "                # print(f\"Skipping invalid operation: {operation}\")\n",
+    "                pass\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 263,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,76 +80,99 @@
     "    last_portion_list = []\n",
     "    \n",
     "    for ref in ref_list:\n",
-    "        match = re.search(r'/([^/]+)$', ref['$ref'])\n",
-    "        if match:\n",
-    "            last_portion_list.append(json_spec[\"components\"][\"parameters\"][match.group(1)])\n",
+    "        if '$ref' in ref:  # Check if '$ref' exists in the dictionary\n",
+    "            match = re.search(r'/([^/]+)$', ref['$ref'])\n",
+    "            if match:\n",
+    "                last_portion_list.append(json_spec[\"components\"][\"parameters\"][match.group(1)])\n",
+    "        else:\n",
+    "            # If '$ref' doesn't exist, add the reference as is\n",
+    "            last_portion_list.append(ref)\n",
     "    \n",
     "    return last_portion_list"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 261,
    "metadata": {},
    "outputs": [],
    "source": [
     "def process_api_operation(method, api_operation, json_spec):\n",
     "    if method == \"get\":\n",
     "        return api_operation\n",
-    "    else:\n",
-    "        request_schema = api_operation[\"requestBody\"][\"content\"][\"application/json\"][\"schema\"]\n",
-    "        resolved_request = resolve_refs(request_schema, json_spec.dict_)\n",
-    "        return resolved_request"
+    "    \n",
+    "    request_body = api_operation.get(\"requestBody\")\n",
+    "    \n",
+    "    if not isinstance(request_body, dict):\n",
+    "        return api_operation  # Return the request_schema if it's not a dictionary\n",
+    "    \n",
+    "    request_schema = request_body[\"content\"][\"application/json\"][\"schema\"]\n",
+    "    resolved_request = resolve_refs(request_schema, json_spec.dict_)\n",
+    "    return resolved_request"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 264,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'in': 'query', 'name': 'device_id', 'required': False, 'schema': {'description': \"The id of the device this command is targeting. If not supplied, the user's currently active device is the target.\\n\", 'example': '0d1841b0976bae2a3a310dd74c0f3df354899bc8', 'title': 'Device ID', 'type': 'string'}}]\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "{'description': 'Get Spotify catalog information for multiple albums identified by their Spotify IDs.\\n',\n",
-       " 'operationId': 'get-multiple-albums',\n",
+       "{'description': \"Pause playback on the user's account.\\n\",\n",
+       " 'operationId': 'pause-a-users-playback',\n",
        " 'parameters': [{'in': 'query',\n",
-       "   'name': 'ids',\n",
-       "   'required': True,\n",
-       "   'schema': {'description': 'A comma-separated list of the [Spotify IDs](/documentation/web-api/concepts/spotify-uris-ids) for the albums. Maximum: 20 IDs.\\n',\n",
-       "    'example': '382ObEPsp2rxGrnsizN5TX,1A2GTWGtFfWp7KSQTwWOyo,2noRn2Aes5aoNVsU6iWThc',\n",
-       "    'title': 'Spotify Album IDs',\n",
-       "    'type': 'string'}},\n",
-       "  {'in': 'query',\n",
-       "   'name': 'market',\n",
+       "   'name': 'device_id',\n",
        "   'required': False,\n",
-       "   'schema': {'description': 'An [ISO 3166-1 alpha-2 country code](https://en.wikipedia.org/wiki/ISO_3166-1_alpha-2).\\n  If a country code is specified, only content that is available in that market will be returned.<br/>\\n  If a valid user access token is specified in the request header, the country associated with\\n  the user account will take priority over this parameter.<br/>\\n  _**Note**: If neither market or user country are provided, the content is considered unavailable for the client._<br/>\\n  Users can view the country that is associated with their account in the [account settings](https://www.spotify.com/se/account/overview/).\\n',\n",
-       "    'example': 'ES',\n",
-       "    'title': 'Market',\n",
+       "   'schema': {'description': \"The id of the device this command is targeting. If not supplied, the user's currently active device is the target.\\n\",\n",
+       "    'example': '0d1841b0976bae2a3a310dd74c0f3df354899bc8',\n",
+       "    'title': 'Device ID',\n",
        "    'type': 'string'}}],\n",
-       " 'responses': {'200': {'$ref': '#/components/responses/ManyAlbums'},\n",
+       " 'responses': {'204': {'description': 'Playback paused'},\n",
        "  '401': {'$ref': '#/components/responses/Unauthorized'},\n",
        "  '403': {'$ref': '#/components/responses/Forbidden'},\n",
        "  '429': {'$ref': '#/components/responses/TooManyRequests'}},\n",
-       " 'security': [{'oauth_2_0': []}],\n",
-       " 'summary': 'Get Several Albums\\n',\n",
-       " 'tags': ['Albums'],\n",
-       " 'x-spotify-docs-console-url': '/console/get-several-albums/',\n",
-       " 'x-spotify-docs-endpoint-name': 'Get Multiple Albums',\n",
-       " 'x-spotify-policy-list': {'$ref': '#/components/x-spotify-policy/metadataPolicyList'}}"
+       " 'security': [{'oauth_2_0': ['user-modify-playback-state']}],\n",
+       " 'summary': 'Pause Playback\\n',\n",
+       " 'tags': ['Player'],\n",
+       " 'x-spotify-docs-console-url': '/console/put-pause/',\n",
+       " 'x-spotify-docs-endpoint-name': \"Pause a User's Playback\",\n",
+       " 'x-spotify-policy-list': {'$ref': '#/components/x-spotify-policy/playerPolicyList'}}"
       ]
      },
-     "execution_count": 176,
+     "execution_count": 264,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "api_operation, method=get_api_operation_by_id(json_spec, \"get-information-about-the-users-current-playback\")\n",
+    "with open(\"openapi.yaml\") as f:\n",
+    "    data = yaml.load(f, Loader=yaml.FullLoader)\n",
+    "json_spec = JsonSpec(dict_=data, max_value_length=4000)\n",
+    "\n",
+    "api_operation, method=get_api_operation_by_id(json_spec, \"pause-a-users-playback\")\n",
     "isolated_request = process_api_operation(method, api_operation, json_spec)\n",
-    "isolated_request[\"parameters\"] = hydrateParams(json_spec.dict_, isolated_request[\"parameters\"])\n",
+    "\n",
+    "print(isolated_request[\"parameters\"])\n",
+    "if isolated_request and isolated_request[\"parameters\"]:\n",
+    "    isolated_request[\"parameters\"] = hydrateParams(json_spec.dict_, isolated_request[\"parameters\"])\n",
     "\n",
     "isolated_request"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
