Adding more context for post request

--- a/llm-server/notebooks/openapi.ipynb
+++ b/llm-server/notebooks/openapi.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": 322,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 259,
+   "execution_count": 323,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 263,
+   "execution_count": 324,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,61 +93,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 261,
+   "execution_count": 327,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def process_api_operation(method, api_operation, json_spec):\n",
-    "    if method == \"get\":\n",
-    "        return api_operation\n",
-    "    \n",
+    "def process_api_operation(method, api_operation, json_spec):    \n",
     "    request_body = api_operation.get(\"requestBody\")\n",
     "    \n",
     "    if not isinstance(request_body, dict):\n",
     "        return api_operation  # Return the request_schema if it's not a dictionary\n",
     "    \n",
-    "    request_schema = request_body[\"content\"][\"application/json\"][\"schema\"]\n",
-    "    resolved_request = resolve_refs(request_schema, json_spec.dict_)\n",
-    "    return resolved_request"
+    "    request_body = request_body[\"content\"][\"application/json\"][\"schema\"]\n",
+    "    request_body = resolve_refs(request_body, json_spec.dict_)\n",
+    "    api_operation[\"request_body\"] = request_body\n",
+    "    return api_operation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 264,
+   "execution_count": 328,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[{'in': 'query', 'name': 'device_id', 'required': False, 'schema': {'description': \"The id of the device this command is targeting. If not supplied, the user's currently active device is the target.\\n\", 'example': '0d1841b0976bae2a3a310dd74c0f3df354899bc8', 'title': 'Device ID', 'type': 'string'}}]\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "{'description': \"Pause playback on the user's account.\\n\",\n",
-       " 'operationId': 'pause-a-users-playback',\n",
+       "{'description': \"Start a new context or resume current playback on the user's active device.\\n\",\n",
+       " 'operationId': 'start-a-users-playback',\n",
        " 'parameters': [{'in': 'query',\n",
        "   'name': 'device_id',\n",
        "   'required': False,\n",
-       "   'schema': {'description': \"The id of the device this command is targeting. If not supplied, the user's currently active device is the target.\\n\",\n",
+       "   'schema': {'description': \"The id of the device this command is targeting. If not supplied, the user's currently active device is the target.\",\n",
        "    'example': '0d1841b0976bae2a3a310dd74c0f3df354899bc8',\n",
        "    'title': 'Device ID',\n",
        "    'type': 'string'}}],\n",
-       " 'responses': {'204': {'description': 'Playback paused'},\n",
+       " 'requestBody': {'content': {'application/json': {'schema': {'additionalProperties': True,\n",
+       "     'example': {'context_uri': 'spotify:album:5ht7ItJgpBH7W6vJ5BqpPr',\n",
+       "      'offset': {'position': 5},\n",
+       "      'position_ms': 0},\n",
+       "     'properties': {'context_uri': {'additionalProperties': True,\n",
+       "       'description': 'Optional. Spotify URI of the context to play.\\nValid contexts are albums, artists & playlists.\\n`{context_uri:\"spotify:album:1Je1IMUlBXcx1Fz0WE7oPT\"}`\\n',\n",
+       "       'type': 'string'},\n",
+       "      'offset': {'additionalProperties': True,\n",
+       "       'description': 'Optional. Indicates from where in the context playback should start. Only available when context_uri corresponds to an album or playlist object\\n\"position\" is zero based and can’t be negative. Example: `\"offset\": {\"position\": 5}`\\n\"uri\" is a string representing the uri of the item to start at. Example: `\"offset\": {\"uri\": \"spotify:track:1301WleyT98MSxVHPZCA6M\"}`\\n',\n",
+       "       'type': 'object'},\n",
+       "      'position_ms': {'additionalProperties': True,\n",
+       "       'description': 'integer',\n",
+       "       'type': 'integer'},\n",
+       "      'uris': {'description': 'Optional. A JSON array of the Spotify track URIs to play.\\nFor example: `{\"uris\": [\"spotify:track:4iV5W9uYEdYUVa79Axb7Rh\", \"spotify:track:1301WleyT98MSxVHPZCA6M\"]}`\\n',\n",
+       "       'items': {'type': 'string'},\n",
+       "       'type': 'array'}},\n",
+       "     'type': 'object'}}}},\n",
+       " 'responses': {'204': {'description': 'Playback started'},\n",
        "  '401': {'$ref': '#/components/responses/Unauthorized'},\n",
        "  '403': {'$ref': '#/components/responses/Forbidden'},\n",
        "  '429': {'$ref': '#/components/responses/TooManyRequests'}},\n",
        " 'security': [{'oauth_2_0': ['user-modify-playback-state']}],\n",
-       " 'summary': 'Pause Playback\\n',\n",
+       " 'summary': 'Start/Resume Playback\\n',\n",
        " 'tags': ['Player'],\n",
-       " 'x-spotify-docs-console-url': '/console/put-pause/',\n",
-       " 'x-spotify-docs-endpoint-name': \"Pause a User's Playback\",\n",
-       " 'x-spotify-policy-list': {'$ref': '#/components/x-spotify-policy/playerPolicyList'}}"
+       " 'x-spotify-docs-console-url': '/console/put-play/',\n",
+       " 'x-spotify-docs-endpoint-name': \"Start/Resume a User's Playback\",\n",
+       " 'x-spotify-policy-list': {'$ref': '#/components/x-spotify-policy/playerPolicyList'},\n",
+       " 'request_body': {'additionalProperties': True,\n",
+       "  'example': {'context_uri': 'spotify:album:5ht7ItJgpBH7W6vJ5BqpPr',\n",
+       "   'offset': {'position': 5},\n",
+       "   'position_ms': 0},\n",
+       "  'properties': {'context_uri': {'additionalProperties': True,\n",
+       "    'description': 'Optional. Spotify URI of the context to play.\\nValid contexts are albums, artists & playlists.\\n`{context_uri:\"spotify:album:1Je1IMUlBXcx1Fz0WE7oPT\"}`\\n',\n",
+       "    'type': 'string'},\n",
+       "   'offset': {'additionalProperties': True,\n",
+       "    'description': 'Optional. Indicates from where in the context playback should start. Only available when context_uri corresponds to an album or playlist object\\n\"position\" is zero based and can’t be negative. Example: `\"offset\": {\"position\": 5}`\\n\"uri\" is a string representing the uri of the item to start at. Example: `\"offset\": {\"uri\": \"spotify:track:1301WleyT98MSxVHPZCA6M\"}`\\n',\n",
+       "    'type': 'object'},\n",
+       "   'position_ms': {'additionalProperties': True,\n",
+       "    'description': 'integer',\n",
+       "    'type': 'integer'},\n",
+       "   'uris': {'description': 'Optional. A JSON array of the Spotify track URIs to play.\\nFor example: `{\"uris\": [\"spotify:track:4iV5W9uYEdYUVa79Axb7Rh\", \"spotify:track:1301WleyT98MSxVHPZCA6M\"]}`\\n',\n",
+       "    'items': {'type': 'string'},\n",
+       "    'type': 'array'}},\n",
+       "  'type': 'object'}}"
       ]
      },
-     "execution_count": 264,
+     "execution_count": 328,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -157,11 +182,10 @@
     "    data = yaml.load(f, Loader=yaml.FullLoader)\n",
     "json_spec = JsonSpec(dict_=data, max_value_length=4000)\n",
     "\n",
-    "api_operation, method=get_api_operation_by_id(json_spec, \"pause-a-users-playback\")\n",
+    "api_operation, method=get_api_operation_by_id(json_spec, \"start-a-users-playback\")\n",
     "isolated_request = process_api_operation(method, api_operation, json_spec)\n",
     "\n",
-    "print(isolated_request[\"parameters\"])\n",
-    "if isolated_request and isolated_request[\"parameters\"]:\n",
+    "if isolated_request and \"parameters\" in isolated_request:\n",
     "    isolated_request[\"parameters\"] = hydrateParams(json_spec.dict_, isolated_request[\"parameters\"])\n",
     "\n",
     "isolated_request"
