--- a/llm-server/notebooks/openapi.ipynb
+++ b/llm-server/notebooks/openapi.ipynb
@@ -2,13 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 322,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "from langchain.agents import create_openapi_agent\n",
     "from langchain.agents.agent_toolkits import OpenAPIToolkit\n",
-    "from langchain.llms.openai import OpenAI\n",
     "from langchain.requests import TextRequestsWrapper\n",
     "from langchain.tools.json.tool import JsonSpec\n",
     "import json, yaml"
@@ -16,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 323,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 324,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 327,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,72 +110,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 328,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'description': \"Start a new context or resume current playback on the user's active device.\\n\",\n",
-       " 'operationId': 'start-a-users-playback',\n",
-       " 'parameters': [{'in': 'query',\n",
-       "   'name': 'device_id',\n",
-       "   'required': False,\n",
-       "   'schema': {'description': \"The id of the device this command is targeting. If not supplied, the user's currently active device is the target.\",\n",
-       "    'example': '0d1841b0976bae2a3a310dd74c0f3df354899bc8',\n",
-       "    'title': 'Device ID',\n",
-       "    'type': 'string'}}],\n",
-       " 'requestBody': {'content': {'application/json': {'schema': {'additionalProperties': True,\n",
-       "     'example': {'context_uri': 'spotify:album:5ht7ItJgpBH7W6vJ5BqpPr',\n",
-       "      'offset': {'position': 5},\n",
-       "      'position_ms': 0},\n",
-       "     'properties': {'context_uri': {'additionalProperties': True,\n",
-       "       'description': 'Optional. Spotify URI of the context to play.\\nValid contexts are albums, artists & playlists.\\n`{context_uri:\"spotify:album:1Je1IMUlBXcx1Fz0WE7oPT\"}`\\n',\n",
-       "       'type': 'string'},\n",
-       "      'offset': {'additionalProperties': True,\n",
-       "       'description': 'Optional. Indicates from where in the context playback should start. Only available when context_uri corresponds to an album or playlist object\\n\"position\" is zero based and can’t be negative. Example: `\"offset\": {\"position\": 5}`\\n\"uri\" is a string representing the uri of the item to start at. Example: `\"offset\": {\"uri\": \"spotify:track:1301WleyT98MSxVHPZCA6M\"}`\\n',\n",
-       "       'type': 'object'},\n",
-       "      'position_ms': {'additionalProperties': True,\n",
-       "       'description': 'integer',\n",
-       "       'type': 'integer'},\n",
-       "      'uris': {'description': 'Optional. A JSON array of the Spotify track URIs to play.\\nFor example: `{\"uris\": [\"spotify:track:4iV5W9uYEdYUVa79Axb7Rh\", \"spotify:track:1301WleyT98MSxVHPZCA6M\"]}`\\n',\n",
-       "       'items': {'type': 'string'},\n",
-       "       'type': 'array'}},\n",
-       "     'type': 'object'}}}},\n",
-       " 'responses': {'204': {'description': 'Playback started'},\n",
-       "  '401': {'$ref': '#/components/responses/Unauthorized'},\n",
-       "  '403': {'$ref': '#/components/responses/Forbidden'},\n",
-       "  '429': {'$ref': '#/components/responses/TooManyRequests'}},\n",
-       " 'security': [{'oauth_2_0': ['user-modify-playback-state']}],\n",
-       " 'summary': 'Start/Resume Playback\\n',\n",
-       " 'tags': ['Player'],\n",
-       " 'x-spotify-docs-console-url': '/console/put-play/',\n",
-       " 'x-spotify-docs-endpoint-name': \"Start/Resume a User's Playback\",\n",
-       " 'x-spotify-policy-list': {'$ref': '#/components/x-spotify-policy/playerPolicyList'},\n",
-       " 'request_body': {'additionalProperties': True,\n",
-       "  'example': {'context_uri': 'spotify:album:5ht7ItJgpBH7W6vJ5BqpPr',\n",
-       "   'offset': {'position': 5},\n",
-       "   'position_ms': 0},\n",
-       "  'properties': {'context_uri': {'additionalProperties': True,\n",
-       "    'description': 'Optional. Spotify URI of the context to play.\\nValid contexts are albums, artists & playlists.\\n`{context_uri:\"spotify:album:1Je1IMUlBXcx1Fz0WE7oPT\"}`\\n',\n",
-       "    'type': 'string'},\n",
-       "   'offset': {'additionalProperties': True,\n",
-       "    'description': 'Optional. Indicates from where in the context playback should start. Only available when context_uri corresponds to an album or playlist object\\n\"position\" is zero based and can’t be negative. Example: `\"offset\": {\"position\": 5}`\\n\"uri\" is a string representing the uri of the item to start at. Example: `\"offset\": {\"uri\": \"spotify:track:1301WleyT98MSxVHPZCA6M\"}`\\n',\n",
-       "    'type': 'object'},\n",
-       "   'position_ms': {'additionalProperties': True,\n",
-       "    'description': 'integer',\n",
-       "    'type': 'integer'},\n",
-       "   'uris': {'description': 'Optional. A JSON array of the Spotify track URIs to play.\\nFor example: `{\"uris\": [\"spotify:track:4iV5W9uYEdYUVa79Axb7Rh\", \"spotify:track:1301WleyT98MSxVHPZCA6M\"]}`\\n',\n",
-       "    'items': {'type': 'string'},\n",
-       "    'type': 'array'}},\n",
-       "  'type': 'object'}}"
-      ]
-     },
-     "execution_count": 328,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "with open(\"openapi.yaml\") as f:\n",
     "    data = yaml.load(f, Loader=yaml.FullLoader)\n",
@@ -186,9 +122,154 @@
     "isolated_request = process_api_operation(method, api_operation, json_spec)\n",
     "\n",
     "if isolated_request and \"parameters\" in isolated_request:\n",
-    "    isolated_request[\"parameters\"] = hydrateParams(json_spec.dict_, isolated_request[\"parameters\"])\n",
+    "    isolated_request[\"parameters\"] = hydrateParams(json_spec.dict_, isolated_request[\"parameters\"])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain.llms.openai import OpenAI\n",
+    "import os \n",
+    "openai_api_key = \"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\" # os.getenv(\"OPENAI_API_KEY\")\n",
     "\n",
-    "isolated_request"
+    "llm = OpenAI(openai_api_key=openai_api_key)\n",
+    "from langchain.llms import OpenAI\n",
+    "from langchain import PromptTemplate, LLMChain"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain.memory import VectorStoreRetrieverMemory\n",
+    "from langchain.vectorstores import FAISS\n",
+    "from langchain.docstore import InMemoryDocstore\n",
+    "from langchain.embeddings.openai import OpenAIEmbeddings\n",
+    "import faiss\n",
+    "\n",
+    "# Initialize the VectorStore\n",
+    "embedding_size = 1536  # Dimensions of the OpenAIEmbeddings\n",
+    "index = faiss.IndexFlatL2(embedding_size)\n",
+    "embedding_fn = OpenAIEmbeddings(openai_api_key=openai_api_key).embed_query\n",
+    "vectorstore = FAISS(embedding_fn, index, InMemoryDocstore({}), {})\n",
+    "\n",
+    "# Create the VectorStoreRetrieverMemory\n",
+    "retriever = vectorstore.as_retriever(search_kwargs=dict(k=1))\n",
+    "memory = VectorStoreRetrieverMemory(retriever=retriever)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "\u001b[1m> Entering new ConversationChain chain...\u001b[0m\n",
+      "Prompt after formatting:\n",
+      "\u001b[32;1m\u001b[1;3mGenerate a JSON API payload using the information from previous conversation and a Swagger OpenAPI schema. Your output must be a valid json starting with ```json and ending with ```\n",
+      "\n",
+      "Relevant pieces of previous conversation:\n",
+      "\n",
+      "\n",
+      "(You do not need to use these pieces of information if not relevant)\n",
+      "\n",
+      "Current conversation:\n",
+      "Human: My device id is 0d1841b0976bae2a3a310dd74c0f3df354899bc8, context uri is 5ht7ItJgpBH7W6vJ5BqpPr and track id is 4iV5W9uYEdYUVa79Axb7Rh\n",
+      "    the openapi schema is {'description': \"Start a new context or resume current playback on the user's active device.\\n\", 'operationId': 'start-a-users-playback', 'parameters': [{'in': 'query', 'name': 'device_id', 'required': False, 'schema': {'description': \"The id of the device this command is targeting. If not supplied, the user's currently active device is the target.\", 'example': '0d1841b0976bae2a3a310dd74c0f3df354899bc8', 'title': 'Device ID', 'type': 'string'}}], 'requestBody': {'content': {'application/json': {'schema': {'additionalProperties': True, 'example': {'context_uri': 'spotify:album:5ht7ItJgpBH7W6vJ5BqpPr', 'offset': {'position': 5}, 'position_ms': 0}, 'properties': {'context_uri': {'additionalProperties': True, 'description': 'Optional. Spotify URI of the context to play.\\nValid contexts are albums, artists & playlists.\\n`{context_uri:\"spotify:album:1Je1IMUlBXcx1Fz0WE7oPT\"}`\\n', 'type': 'string'}, 'offset': {'additionalProperties': True, 'description': 'Optional. Indicates from where in the context playback should start. Only available when context_uri corresponds to an album or playlist object\\n\"position\" is zero based and can’t be negative. Example: `\"offset\": {\"position\": 5}`\\n\"uri\" is a string representing the uri of the item to start at. Example: `\"offset\": {\"uri\": \"spotify:track:1301WleyT98MSxVHPZCA6M\"}`\\n', 'type': 'object'}, 'position_ms': {'additionalProperties': True, 'description': 'integer', 'type': 'integer'}, 'uris': {'description': 'Optional. A JSON array of the Spotify track URIs to play.\\nFor example: `{\"uris\": [\"spotify:track:4iV5W9uYEdYUVa79Axb7Rh\", \"spotify:track:1301WleyT98MSxVHPZCA6M\"]}`\\n', 'items': {'type': 'string'}, 'type': 'array'}}, 'type': 'object'}}}}, 'responses': {'204': {'description': 'Playback started'}, '401': {'$ref': '#/components/responses/Unauthorized'}, '403': {'$ref': '#/components/responses/Forbidden'}, '429': {'$ref': '#/components/responses/TooManyRequests'}}, 'security': [{'oauth_2_0': ['user-modify-playback-state']}], 'summary': 'Start/Resume Playback\\n', 'tags': ['Player'], 'x-spotify-docs-console-url': '/console/put-play/', 'x-spotify-docs-endpoint-name': \"Start/Resume a User's Playback\", 'x-spotify-policy-list': {'$ref': '#/components/x-spotify-policy/playerPolicyList'}, 'request_body': {'additionalProperties': True, 'example': {'context_uri': 'spotify:album:5ht7ItJgpBH7W6vJ5BqpPr', 'offset': {'position': 5}, 'position_ms': 0}, 'properties': {'context_uri': {'additionalProperties': True, 'description': 'Optional. Spotify URI of the context to play.\\nValid contexts are albums, artists & playlists.\\n`{context_uri:\"spotify:album:1Je1IMUlBXcx1Fz0WE7oPT\"}`\\n', 'type': 'string'}, 'offset': {'additionalProperties': True, 'description': 'Optional. Indicates from where in the context playback should start. Only available when context_uri corresponds to an album or playlist object\\n\"position\" is zero based and can’t be negative. Example: `\"offset\": {\"position\": 5}`\\n\"uri\" is a string representing the uri of the item to start at. Example: `\"offset\": {\"uri\": \"spotify:track:1301WleyT98MSxVHPZCA6M\"}`\\n', 'type': 'object'}, 'position_ms': {'additionalProperties': True, 'description': 'integer', 'type': 'integer'}, 'uris': {'description': 'Optional. A JSON array of the Spotify track URIs to play.\\nFor example: `{\"uris\": [\"spotify:track:4iV5W9uYEdYUVa79Axb7Rh\", \"spotify:track:1301WleyT98MSxVHPZCA6M\"]}`\\n', 'items': {'type': 'string'}, 'type': 'array'}}, 'type': 'object'}}\n",
+      "\n",
+      "The API payload is: \u001b[0m\n",
+      "\n",
+      "\u001b[1m> Finished chain.\u001b[0m\n"
+     ]
+    }
+   ],
+   "source": [
+    "from langchain.prompts import PromptTemplate\n",
+    "\n",
+    "from langchain.chains import ConversationChain\n",
+    "\n",
+    "_DEFAULT_TEMPLATE = \"\"\"Generate a JSON API payload using the information from previous conversation and a Swagger OpenAPI schema. Your output must be a valid json starting with ```json and ending with ```\n",
+    "\n",
+    "Relevant pieces of previous conversation:\n",
+    "{history}\n",
+    "\n",
+    "(You do not need to use these pieces of information if not relevant)\n",
+    "\n",
+    "Current conversation:\n",
+    "Human: {input}\n",
+    "The API payload is: \"\"\"\n",
+    "\n",
+    "PROMPT = PromptTemplate(\n",
+    "    input_variables=[\"history\", \"input\"], template=_DEFAULT_TEMPLATE\n",
+    ")\n",
+    "conversation_with_summary = ConversationChain(\n",
+    "    llm=llm, \n",
+    "    prompt=PROMPT,\n",
+    "    # We set a very low max_token_limit for the purposes of testing.\n",
+    "    # memory=memory,\n",
+    "    verbose=True\n",
+    ")\n",
+    "json_string = conversation_with_summary.predict(input=f\"\"\"My device id is 0d1841b0976bae2a3a310dd74c0f3df354899bc8, context uri is 5ht7ItJgpBH7W6vJ5BqpPr and track id is 4iV5W9uYEdYUVa79Axb7Rh\n",
+    "    the openapi schema is {isolated_request}\n",
+    "\"\"\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def extract_json_payload(input_string):\n",
+    "    try:\n",
+    "        # Find the start and end positions of the JSON payload\n",
+    "        start_index = input_string.find('```json') + len('```json')\n",
+    "        end_index = input_string.rfind('```')\n",
+    "\n",
+    "        # Extract the JSON payload\n",
+    "        json_payload = input_string[start_index:end_index]\n",
+    "\n",
+    "        # Parse the JSON payload\n",
+    "        parsed_json = json.loads(json_payload)\n",
+    "        return parsed_json\n",
+    "    except json.JSONDecodeError as e:\n",
+    "        return None, f\"Error parsing JSON: {e}\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'device_id': '0d1841b0976bae2a3a310dd74c0f3df354899bc8',\n",
+       " 'context_uri': 'spotify:album:5ht7ItJgpBH7W6vJ5BqpPr',\n",
+       " 'offset': {'position': 5},\n",
+       " 'position_ms': 0,\n",
+       " 'uris': ['spotify:track:4iV5W9uYEdYUVa79Axb7Rh',\n",
+       "  'spotify:track:1301WleyT98MSxVHPZCA6M']}"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "extract_json_payload(json_string)"
    ]
   },
   {
